RP-930 Address SonarQube flagged issues